# Yandex-Practicum

./: .gitignore  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt
algorithms/sprint1/: CMakeLists.txt
algorithms/sprint1/src/: quadratic_equation.cpp  quadratic_equation.hpp  three_of_even_or_odd.hpp
algorithms/sprint1/test/: point_neighbors_test.cpp  quadratic_equation_test.cpp  three_of_even_or_odd_test.cpp
cmake/: AddGoogleTests.cmake  DownloadUsingCPM.cmake  SetupEnvironment.cmake  SetupGTest.cmake  get_cpm.cmake
src/courses/algorithms/: CMakeLists.txt
src/courses/algorithms/sprint1/: CMakeLists.txt
src/courses/algorithms/sprint1/final/1.nearest_zero/: nearest_zero.cpp  nearest_zero.hpp  nearest_zero_test.cpp  readme.md
src/courses/algorithms/sprint1/final/2.sleight_of_hand/: readme.md  sleight_of_hand.hpp  sleight_of_hand_test.cpp
src/courses/algorithms/sprint1/tasks/1.function_values/: quadratic_equation_test.cpp
src/courses/algorithms/sprint1/tasks/2.even_and_odd_numbers/: three_of_even_or_odd.cpp  three_of_even_or_odd_test.cpp
src/courses/algorithms/sprint1/tasks/3.neighbors/: point_neighbors.cpp  point_neighbors.hpp  point_neighbors_test.cpp
src/courses/algorithms/sprint1/tasks/4.chaotic_weather/: chaotic_weather.cpp  chaotic_weather.hpp  chaotic_weather_test.cpp
src/courses/algorithms/sprint1/tasks/5.the_longest_word/: longest_word.cpp  longest_word.hpp  longest_word_test.cpp
src/courses/algorithms/sprint1/tasks/6.palindrome/: palindrome.cpp  palindrome.hpp  palindrome_test.cpp
